codex-rs/tui-composer/src/bottom_pane/snapshots/codex_tui_composer__bottom_pane__chat_composer__tests__status_line_right_context_keeps_goal_with_active_agent.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"text:      {text}\\nmagenta:   {magenta}\\ndark_gray: {dark_gray}\")"
---
text:        codex · main-fork · opus-4-8                 Pursuing goal (4K / 10K) · /root/berlin_weather
magenta:                                                  ^^^^^^^^^^^^^^^^^^^^^^^^
dark_gray:                                                                           ^^^^^^^^^^^^^^^^^^^^
